Carriage return removal (test)

--- a/ec2stack/templates/images.xml
+++ b/ec2stack/templates/images.xml
@@ -3,9 +3,7 @@
     <imagesSet>
         {% for image in response.template %}
         <item>
-            <imageId>
-                {{ image.id }}
-            </imageId>
+            <imageId>{{ image.id }}</imageId>
             <name>{{ image.name }}</name>
             {% if image.isready == true %}
             <imageState>available</imageState>
